fix resources urls